--- a/FYP/app/src/main/res/layout/activity_main.xml
+++ b/FYP/app/src/main/res/layout/activity_main.xml
@@ -12,13 +12,34 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="SIGN UP"
+        android:text="PARTTIME"
         android:textColor="@color/black"
         android:textSize="50dp"
         android:textStyle="bold"
         android:gravity="center_horizontal"
-        android:layout_marginTop="40dp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginTop="15dp"
+        />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Be your own boss"
+        android:textColor="@color/black"
+        android:textSize="10dp"
+        android:textStyle="bold"
+        android:gravity="center_horizontal"
+        android:layout_marginBottom="5dp"
+        />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="SIGN UP"
+        android:textColor="@color/black"
+        android:textSize="30dp"
+        android:gravity="center_horizontal"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="5dp"
         />
 
     <EditText
@@ -64,7 +85,7 @@
         android:text="REGISTER"
         android:textSize="20dp"
         android:backgroundTint="@color/black"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="10dp"
         />
 
     <Button
@@ -76,7 +97,18 @@
         android:textColor="@color/black"
         android:textStyle="bold"
         android:backgroundTint="#00000000"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="10dp"
+        />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Parttimer Login"
+        android:id="@+id/parttimerlogin"
+        android:textColor="@color/black"
+        android:textSize="10dp"
+        android:gravity="center_horizontal"
+        android:layout_marginBottom="5dp"
         />
 
 </LinearLayout>
